Add client-side ender chest caching as a fallback
Closes #244